--- a/src/analysis/sandbox/eda/eda_february.Rmd
+++ b/src/analysis/sandbox/eda/eda_february.Rmd
@@ -15,6 +15,19 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(warning = FALSE, message = FALSE, out.width = "100%")
+
+# datatable sytle
+dt_make <- function(x){
+  x %>% 
+    DT::datatable(
+    rownames = FALSE, 
+    extensions = 'Buttons', 
+    options = list(
+      dom = 'Bfrtip', 
+      buttons = c('copy', 'csv', 'excel')
+    )
+  )
+}
 ```
 
 *Jess Goddard & Rich Pauloo*
@@ -130,14 +143,7 @@ ggplot() +
 states_df %>% 
   filter(!is.na(state_abbr)) %>% 
   arrange(status, state_abbr) %>% 
-  DT::datatable(
-    rownames = FALSE, 
-    extensions = 'Buttons', 
-    options = list(
-      dom = 'Bfrtip', 
-      buttons = c('copy', 'csv', 'excel')
-    )
-  )
+  dt_make()
 ```
 
 > **RECCOMENDATION:** we should collect as many upstream labeled data sources from missing states which will increase the completeness of the overall labeled dataset and improve predicted boundaries.  
@@ -208,7 +214,7 @@ Centroid geocoding method varies by state. States primarily derive centroid from
 jcs <- jc %>% 
   # anything that appears less then 5% of the time is lumped into "other"
   mutate(echo_geocode_method = fct_lump_prop(echo_geocode_method, 0.05)) %>%
-  group_by(state_code, echo_geocode_method) %>% 
+  group_by(primacy_agency_code, echo_geocode_method) %>% 
   summarise(n = n()) %>% 
   mutate(p = n / sum(n)) %>% 
   mutate(echo_geocode_method = case_when(
@@ -223,7 +229,7 @@ jcs <- jc %>%
   ungroup()
   
 jcs %>% 
-  filter(!is.na(state_code)) %>% 
+  filter(!is.na(primacy_agency_code)) %>% 
   ggplot(aes(fct_reorder(echo_geocode_method, p), p, 
              fill = echo_geocode_method)) + 
   geom_col() + 
@@ -232,7 +238,7 @@ jcs %>%
   scale_y_continuous(breaks = c(0, 0.5, 1),
                      labels = c(0, 0.5, 1),
                      limits = c(0, 1)) +
-  geofacet::facet_geo(~state_code) +
+  geofacet::facet_geo(~primacy_agency_code) +
   labs(x = "", y = "Proportion", 
        title = "ECHO geocoding method") +
   guides(fill = "none") +
@@ -246,19 +252,12 @@ In the plots above, any method that appeared less then 5% of the time was lumped
 jc %>% 
   # anything that appears less then 5% of the time is lumped into "other"
   mutate(echo_geocode_method = fct_lump_prop(echo_geocode_method, 0.05)) %>%
-  group_by(state_code, echo_geocode_method) %>% 
+  group_by(primacy_agency_code, echo_geocode_method) %>% 
   summarise(n = n()) %>% 
   mutate(p = n / sum(n)) %>% 
   ungroup() %>% 
-  arrange(state_code, desc(p)) %>% 
-  DT::datatable(
-    rownames = FALSE, 
-    extensions = 'Buttons', 
-    options = list(
-      dom = 'Bfrtip', 
-      buttons = c('copy', 'csv', 'excel')
-    )
-  )
+  arrange(primacy_agency_code, desc(p)) %>% 
+  dt_make()
 ```
 
 
@@ -277,7 +276,7 @@ states_labeled <- unique(wsb_labeled_simp$state) %>% discard(is.na)
 jc %>% 
   # remove all pwsids that match to a tigris proxy polygon or labeled state
   filter(is.na(tigris_match_geoid)) %>% 
-  filter(! state_code %in% states_labeled) %>% 
+  filter(! primacy_agency_code %in% states_labeled) %>% 
   # anything that appears less then 5% of the time is lumped into "other"
   mutate(echo_geocode_method = fct_lump_prop(echo_geocode_method, 0.05)) %>%
   group_by(echo_geocode_method) %>% 
@@ -309,10 +308,10 @@ jc %>%
 jcs2 <- jc %>% 
   # remove all pwsids that match to a tigris proxy polygon or labeled state
   filter(is.na(tigris_match_geoid)) %>% 
-  filter(! state_code %in% states_labeled) %>% 
+  filter(! primacy_agency_code %in% states_labeled) %>% 
   # anything that appears less then 5% of the time is lumped into "other"
   mutate(echo_geocode_method = fct_lump_prop(echo_geocode_method, 0.05)) %>%
-  group_by(state_code, echo_geocode_method) %>% 
+  group_by(primacy_agency_code, echo_geocode_method) %>% 
   summarise(n = n()) %>% 
   mutate(p = n / sum(n)) %>% 
   mutate(echo_geocode_method = case_when(
@@ -333,7 +332,7 @@ In the plot below, note that blank states are those for which we have labeled da
 ```{r}
 # plot
 jcs2 %>% 
-  filter(!is.na(state_code)) %>% 
+  filter(!is.na(primacy_agency_code)) %>% 
   ggplot(aes(fct_reorder(echo_geocode_method, p), p, 
              fill = echo_geocode_method)) + 
   geom_col() + 
@@ -342,7 +341,7 @@ jcs2 %>%
   scale_y_continuous(breaks = c(0, 0.5, 1),
                      labels = c(0, 0.5, 1),
                      limits = c(0, 1)) +
-  geofacet::facet_geo(~state_code) +
+  geofacet::facet_geo(~primacy_agency_code) +
   labs(x = "", y = "Proportion", 
        title = "ECHO geocoding method") +
   guides(fill = "none") +
@@ -353,22 +352,15 @@ jcs2 %>%
 jc %>% 
   # remove all pwsids that match to a tigris proxy polygon or labeled state
   filter(is.na(tigris_match_geoid)) %>% 
-  filter(! state_code %in% states_labeled) %>% 
+  filter(! primacy_agency_code %in% states_labeled) %>% 
   # anything that appears less then 5% of the time is lumped into "other"
   mutate(echo_geocode_method = fct_lump_prop(echo_geocode_method, 0.05)) %>%
-  group_by(state_code, echo_geocode_method) %>% 
+  group_by(primacy_agency_code, echo_geocode_method) %>% 
   summarise(n = n()) %>% 
   mutate(p = n / sum(n)) %>% 
   ungroup() %>% 
-  arrange(state_code, desc(p)) %>% 
-  DT::datatable(
-    rownames = FALSE, 
-    extensions = 'Buttons', 
-    options = list(
-      dom = 'Bfrtip', 
-      buttons = c('copy', 'csv', 'excel')
-    )
-  )
+  arrange(primacy_agency_code, desc(p)) %>% 
+  dt_make()
 ```
 
 
@@ -386,9 +378,11 @@ jc %>%
 
 <br>  
 
-## Population served
+### System size (i.e., connection count) and population served
 
-`r nrow(filter(j, is.na(population_served_count))) / nrow(j)`% of PWSIDs are missing "population served" thus, we  classify water service areas in terms of size consistent with [EPA guidelines](https://echo.epa.gov/help/drinking-water-dashboard-help#:~:text=Very%20Small%20%C2%A0%20%C2%A0%20%C2%A0%20500,Very%20Large%C2%A0%C2%A0%C2%A0%C2%A0%C2%A0%20%3E100%2C000):  
+As thes variables relate to one another (we expect a lienar correlation), they are examined together. `r nrow(filter(j, is.na(service_connections_count))) / nrow(j)`% of PWSIDs are missing "system size" and `r nrow(filter(j, is.na(population_served_count))) / nrow(j)`% of PWSIDs are missing "population served", although some of these values are equal to zero and likely incorrect, which we explore later in this section. 
+
+We classify water service areas by size consistent with [EPA guidelines](https://echo.epa.gov/help/drinking-water-dashboard-help#:~:text=Very%20Small%20%C2%A0%20%C2%A0%20%C2%A0%20500,Very%20Large%C2%A0%C2%A0%C2%A0%C2%A0%C2%A0%20%3E100%2C000):  
  
  
 | EPA classification | Connection count    |
@@ -401,6 +395,9 @@ jc %>%
 
 According to the [EPA](https://echo.epa.gov/help/drinking-water-dashboard-help#:~:text=Small%20and%20very%20small%20PWSs%20comprise%20the,source%2C%20such%20as%20a%20drinking%20water%20well.), "small and very small PWSs comprise the approximately 95% of all PWSs, but they serve just 12 percent of all consumers. Small PWSs include both community and non-community water systems. Some examples of non-community systems include office buildings, schools, campgrounds, or highway rest stops with their own water source, such as a drinking water well."
 
+Service connection count ranges from 0 (`r nrow(filter(j, service_connections_count == 0))` PWSIDs) to 
+approximately 1 million (New York City, NY7003493). Within size classes, service connection count shows approximately log-2 scaling, with a the tail of the distribution about falling around twice the mean value. Very Small and Small systems account for 92% of CWSs, which is consistent with EPA's findings (95%). In the plot below, note the different x and y scales. 
+
 ```{r}
 # add water system size to the "incomplete" joined data (2k/55k without lat/lng) joined data
 size_lvls <- c("Very Small", "Small", "Medium", "Large", "Very Large")
@@ -408,51 +405,162 @@ size_lvls <- c("Very Small", "Small", "Medium", "Large", "Very Large")
 j <- j %>% 
   mutate(
     size_class = case_when(
-      population_served_count <= 500 ~ "Very Small",
-      population_served_count > 500 & population_served_count <= 3300 ~ "Small",
-      population_served_count > 3300 & population_served_count <= 10000 ~ "Medium",
-      population_served_count > 10000 & population_served_count <= 100000 ~ "Large",
-      population_served_count > 100000 ~ "Very Large"),
+      service_connections_count <= 500 ~ "Very Small",
+      service_connections_count > 500 & service_connections_count <= 3300 ~ "Small",
+      service_connections_count > 3300 & service_connections_count <= 10000 ~ "Medium",
+      service_connections_count > 10000 & service_connections_count <= 100000 ~ "Large",
+      service_connections_count > 100000 ~ "Very Large"),
     size_class = factor(size_class, levels = size_lvls)
   )
   
 # annotation text and line to highlight NYC
 ann_text <- tibble(
-  label = "New\nYork\nCity",
+  label = "New York City",
   size_class = factor("Very Large", levels = size_lvls)
 )
 
 ann_line <- tibble(
-  xmin = 7e6, xmax = 8.7e6, ymin = 50, ymax = 10,
+  xmin = 8e5, xmax = 9.35e5, ymin = 10, ymax = 2,
   size_class = factor("Very Large", levels = size_lvls)
 )
 
 # plot
 j %>% 
-  ggplot(aes(population_served_count, fill = size_class)) + 
+  ggplot(aes(service_connections_count, fill = size_class)) + 
   geom_histogram(color = "white", lwd = 0.2) +
   geom_text(
     data    = ann_text,
-    mapping = aes(x = 6e6, y = 120, label = label)
+    mapping = aes(x = 6e5, y = 13, label = label)
   ) +
   geom_segment(
     data = ann_line,
     aes(x = xmin, xend = xmax, y = ymin, yend = ymax),
     arrow = arrow(length = unit(0.2, "cm"))) +
   scale_fill_carto_d() +
+  scale_x_continuous(label = scales::comma) +
+  scale_y_continuous(label = scales::comma) +
   facet_wrap(~size_class, scales = "free", ncol = 2) +
-  labs(x = "Population served count", y = "Count") +
+  labs(x = "Service Connection count", y = "Count") +
   theme_minimal() +
   theme(panel.grid.minor = element_blank()) +
   guides(fill = "none")
 ```
 
+```{r}
+j %>% 
+  count(size_class) %>% 
+  mutate(proportion = round(n/sum(n), 2)) %>% 
+  dt_make()
+```
 
-<br>  
 
-## System size (i.e., connection count)
+Although no population count or service connection count is missing, there are zeroes in some of these data fields which may indicate faulty data. Importantly, zeroes are not "completely at random", and show higher frequency in states like SC, which further suggests faultiness. 
 
 
+#### zero service connections
+
+`r round((nrow(filter(j, service_connections_count == 0))/nrow(j))*100, 2)`% of PWSIDs have 0 population served, which is unlikely to be true and primarily impacts SC. We may drop these, or impute a population equal to the mean population for the reported system size if present. 
+
+```{r}
+zero_sc <- filter(j, service_connections_count == 0) 
+
+zero_sc %>%   
+  # rm column created on suspect data
+  select(-size_class) %>% 
+  # only show certain cols in DT
+  select(pwsid, pws_name, pop_count = population_served_count, 
+         con_count = service_connections_count, 
+         tigris = tigris_match_geoid) %>% 
+  dt_make()
+
+zero_sc %>% 
+  count(primacy_agency_code, sort = TRUE, name = "n_missing") %>% 
+  knitr::kable()
+```
+
+#### zero population count
+
+`r round((nrow(filter(j, population_served_count == 0))/nrow(j))*100, 2)`% of PWSIDs have 0 population served, which is unlikely to be true and primarily impacts TX, CA, SC, CO, and ME. We may drop these, or impute a population equal to the mean population for the reported system size (if present). 
+
+```{r}
+zero_pop <- filter(j, population_served_count == 0) 
+
+zero_pop %>%   
+  # rm column created on suspect data
+  select(-size_class) %>% 
+  # only show certain cols in DT
+  select(pwsid, pws_name, pop_count = population_served_count, 
+         con_count = service_connections_count, 
+         tigris = tigris_match_geoid) %>% 
+  dt_make()
+
+zero_pop %>% 
+  count(primacy_agency_code, sort = TRUE, name = "n_missing") %>% 
+  knitr::kable()
+```
+
+
+
+#### zero service connections AND zero population served
+
+- `r round((nrow(filter(j, service_connections_count == 0 & population_served_count == 0))/nrow(j))*100, 2)`% of PWSIDs have 0 population served **AND** 0 service connection count. These primarily impact 
+
+```{r}
+zero_sc_pop <- filter(j, service_connections_count == 0 & 
+                        population_served_count == 0)
+
+zero_sc_pop %>% 
+  # rm column created on suspect data
+  select(-size_class) %>% 
+  # only show certain cols in DT
+  select(pwsid, pws_name, pop_count = population_served_count, 
+         con_count = service_connections_count, 
+         tigris = tigris_match_geoid) %>% 
+  dt_make()
+
+zero_sc_pop %>% 
+  count(primacy_agency_code, sort = TRUE, name = "n_missing") %>% 
+  knitr::kable()
+```
+
+
+#### zero service connections OR zero population served
+
+- `r round((nrow(filter(j, service_connections_count == 0 | population_served_count == 0))/nrow(j))*100, 2)`% of PWSIDs have 0 population served **OR** 0 service connection count. These strongly indicate faulty data: how can non-zero service connections indicate zero population, or vice versa? TX, CA, SC, and CO are among the chief offenders, although we expect more faulty data for large states like CA and TX, but not as much for a small state like SC.
+
+```{r}
+zero_sc_or_pop <- filter(j, service_connections_count == 0 | 
+                        population_served_count == 0)
+
+zero_sc_or_pop %>% 
+  # rm column created on suspect data
+  select(-size_class) %>% 
+  # only show certain cols in DT
+  select(pwsid, pws_name, pop_count = population_served_count, 
+         con_count = service_connections_count, 
+         tigris = tigris_match_geoid) %>% 
+  dt_make()
+
+zero_sc_or_pop %>% 
+  count(primacy_agency_code, sort = TRUE, name = "n_missing") %>% 
+  knitr::kable()
+```
+
+
+> **RECOMMENDATION**: Results suggest around 5% of data is missing either a population served or system size. More often than not, the population served is missing. This may be "mean imputed" from systems of similar size, as population served and service connection count shows a strong linear relationship^[This plot shows other potentially faulty data, for instance, a high leverage point on the x-axis with a population served of 2.5 million, but a very small nonzero service connection count. Similarly, another data point on the y axis has a ~700,000 service connections but serves a very small nonzero population. Outliers outside of, say, 2 or 3SD from the linear model may be discarded from the model, or we may individually clean data, particularly where incorrect data will yield unreasonable predicted boundaries.]: 
+
+```{r}
+j %>% 
+  # remove the rows we propose imputing
+  filter(population_served_count > 0 & service_connections_count > 0) %>% 
+  # remove nnew york city which exerts excessive leverage
+  filter(pwsid != "NY7003493") %>% 
+  ggplot(aes(population_served_count, service_connections_count)) +
+  geom_point(alpha = 0.5) + 
+  geom_smooth(method = "lm") +
+  theme_minimal() +
+  theme(panel.grid.minor = element_blank())
+```
 
 <br>  
 
