--- a/src/analysis/sandbox/eda/eda_february.Rmd
+++ b/src/analysis/sandbox/eda/eda_february.Rmd
@@ -38,11 +38,11 @@ dt_make <- function(x){
 
 # Introduction
 
-Presently, approximately 55,700 active community water systems in the United States collectively serve tap water to approximately **318,000,000* people (source: SDWIS). These water systems cross-cut racial/ethnic, income, and political boundaries, yet despite their importance, up-to-date, easily accessible boundary data (i.e., spatial polygons that delineate water service boundaries) are not organized at the national level. State-level data may exist, but these data tend to be hard to find online, may require cleaning, and little is known on the completeness of these data nationwide. This is beginning to change. Organization, businesses, and academics are currently aiming to fill the gaps. Insights about water quality challenges nationwide are stymied by a lack of water service area boundaries -- most research and work on water quality, for example, emphasizes county-level analyses. Moreover, funding for water systems under the new Justice40 Initiative require organized, accurate spatial data on community water systems and who they serve. 
+Presently, approximately 55,700 active community water systems in the United States collectively serve tap water to approximately *318,000,000* people (source: SDWIS). These water systems cross-cut racial/ethnic, income, and political boundaries, yet despite their importance, up-to-date, easily accessible boundary data (i.e., spatial polygons that delineate water service boundaries) are not organized at the national level. State-level data may exist, but these data tend to be hard to find online, may require cleaning, and little is known on the completeness of these data nationwide. This is beginning to change. Organizations, businesses, and academics currently aim to fill the gaps. Insights about water quality challenges nationwide are stymied by a lack of water service area boundaries -- most research and work on water quality, for example, emphasizes county-level analyses. Moreover, funding for water systems under the new Justice40 Initiative require organized, accurate spatial data on community water systems and who they serve. 
 
-The overarching goal of this [project](https://github.com/SimpleLab-Inc/wsb) is to assemble the nation's first open-source, reproducible pipeline to assimilate existing water service boundary data and provide estimated service boundaries where existing spatial data does not exist. Given large gaps in data, we use a combination of data assimilation and machine learning to assign and predict proxy boundaries where formally labeled spatial data does not exist. To produce the national water service boundary layer, a variety of state and federal data sources must be cleaned, analyzed, joined, and ultimately, modeled. Moreover, this technical effort takes place in the context of stakeholder communication and engagement, and additional data collection efforts. 
+The overarching goal of this [project](https://github.com/SimpleLab-Inc/wsb) is to assemble the nation's first open-source, reproducible pipeline to assimilate existing water service boundary data and provide estimated service boundaries where existing spatial data does not exist. Given large gaps in data, we will use a combination of data assimilation and machine learning to assign and predict proxy boundaries where formally labeled spatial data does not exist. To produce the national water service boundary layer, a variety of state and federal data sources must be cleaned, analyzed, joined, and ultimately, modeled. Underpinning this technical effort is a broader context of stakeholder communication and engagement, and data collection efforts to support modeling. 
 
-This report builds out an initial assessment of existing data sources to prepare for modeling and to facilitate the best allocation of resources in pursuit of a national boundary layer. In this report, we investigate data quality issues in state and federal data to:  
+This report provides an initial assessment of existing data sources to prepare for modeling and to facilitate the best allocation of resources in pursuit of a national boundary layer. In this report, we investigate data quality issues in state and federal data to:  
 
 1. assess data "missingness" (e.g., missing water system boundary polygons, and `NA` or `NULL` values which will impact data collection efforts, and the ability to model missing data)  
 2. examine data quality (e.g., do data actually represent what they report to represent?) to inform future data collection and cleaning efforts and to gauge the appropriateness of modeling with existing data  
@@ -56,12 +56,11 @@ The following outline reflects an exploratory data analysis of the existing data
 
 _Missingness_
 - [ ] Existing coverage of spatial labeled data
-- [ ] Coverage of centroids
+- [ ] Coverage and quality of centroids
 - [ ] Tabular data: assess missingness for key categories (i.e., population served, system size AKA connection count)
 
 _Data Quality_
 - [ ] Number of "imposter" centroids across datasets (echo, frs, mhp)
-- [ ] Centroids of low quality (e.g. `fac_collection_method` is state or county centroid). break down by state, system size (?) -> when we don't have labeled boundary or TIGER/Line shapefile, collection method is really important, we need to characterize how big this group is and where they plot, and how to address them.
 - [ ] Appropriateness of TIGER/Line shapefile as proxy. Compare join for labeled systems: e.g., city of Davis, and Davis TIGER/Line places -> boolean T/F and jacard (less important)
 
 _Coverage relative to SDWIS master list of active, community water systems_
@@ -87,8 +86,8 @@ Labeled Water System Boundaries | URLs on state pages for various water service 
 We examine missingness of key datasets in terms of:
 
 - **The existing coverage of "labeled" service boundaries.** "Labeled" service boundaries refer to spatial polygons of existing data and stand in contrast to "unlabeled" data, which are water systems _without_ explicit spatial polygons and for which we must estimate a boundary.  
-- **Centroid coverage.** For unlabeled data, we must estimate a boundary, and the model we will develop will estimate the radius of a water system boundary from a centroid. Thus we need spatial centroids for unlabeled data. Sometimes thee centroids are provided, sometimes not. We assess their coverage nationwide.  
-- **Tabular data missingness.** Tabular data is non-spatial data associated with water systems (e.g., population served, system size) that can be used to predict water system radii. Missingness in these columns may limit the extensibility of modeling and is thus characterized.  
+- **Centroid coverage and quality.** For unlabeled data, we must estimate a boundary, and the model we will develop will estimate the radius of a water system boundary from a centroid. Thus we need spatial centroids for unlabeled data. Sometimes these centroids are provided, sometimes not. We assess their coverage nationwide and state-by-state.  
+- **Tabular data missingness.** Tabular data is non-spatial data associated with water systems (e.g., population served, system size) that can be used to predict water system radii. Missingness or data quality issues in these columns may limit the extensibility of modeling and is thus characterized.  
 
 <br>  
 
@@ -582,5 +581,12 @@ j %>%
 ```
 
 <br>  
+
+
+# Data Quality
+
+
+# Coverage relative to SDWIS master list of active, community water systems
+
 
 # Recommendations and next steps
